# RFQuack

./: .Makefile.swp  .dockerignore  .gitignore  .gitmodules  404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  COPYRIGHT  Dockerfile  Doxyfile  LICENSE  Makefile  Pipfile  README.md  SECURITY.md  TODO  banner.txt  build.env  index.html  library.json  library.properties  mkdocs.yml  platformio.ini  pyproject.toml  requirements.pip
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  vulnerability.md
.github/workflows/: build.yml  docs.yml  esp32_C1101.yml  main.yml
architecture/: index.html
client/: README.md
client/rfquack/: __init__.py  banner.py  cli.py  core.py  shell.py  topics.py  transport.py
clients/cli/: index.html
docker/: my-entrypoint.sh
docker/project/: platformio.ini
docs/: architecture.md  index.md
docs/clients/: cli.md
docs/hardware/: boards.md  radios.md
docs/modules/: overview.md
docs/support/: community.md  faq.md
docs/usage/: build.md  dependencies.md  download.md  flash.md  quickstart.md  setup.md
examples/: ESP32-dual-RF69-serial-build.env  README.md
examples/RFQuack-Feather32-CC1101-MQTT/: platformio.ini
examples/RFQuack-esp32-CC1101-serial/: platformio.ini
examples/RFQuack-esp32-nRF24/: main.cpp
examples/RFQuack-esp32-nRF24-serial/: platformio.ini
examples/RFQuack-huzzah-rf69hw/: README.md  platformio.ini
examples/RFQuack-huzzah32-rf69hw/: platformio.ini
examples/RFQuack-wemosd1-cc1120/: platformio.ini
examples/RFQuack-wemosd1-cc1120-serial/: platformio.ini
examples/RFQuack-wemosd1-rf69hcw/: Makefile  platformio.ini
examples/RFQuack-wemosd1-rf69hcw-serial/: platformio.ini
examples/build.env/: README.md
examples/demos/: README.md
hardware/boards/: index.html
hardware/radios/: index.html
modules/overview/: index.html
scripts/: pre_build.py
search/: search_index.json
shields/: README.md
src/: rfquack.h  rfquack.options  rfquack.proto  rfquack_certificates.h  rfquack_common.h  rfquack_config.h  rfquack_logging.h  rfquack_network.h  rfquack_radio.h  rfquack_transport.h
(+204 files in other folders)
